# bmstu_iu7_cg

./: .gitmodules  README.md
lab_01/: .gitignore  CMakeLists.txt  README.md
lab_01/src/: QCRectangle.cpp  QCRectangle.hpp  QCTriangle.cpp  QCTriangle.hpp  canvas.cpp  canvas.hpp  custom_exceptions.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  point_actions.cpp  point_actions.hpp  point_transformation.cpp  point_transformation.hpp  ui_mainwindow.hpp
lab_01/tests/: canvas_tests.cpp  point_tests.cpp
lab_02/: CMakeLists.txt  README.md
lab_02/libs/picture/: CMakeLists.txt
lab_02/libs/picture/include/picture/: house.hpp  picture.hpp  point_transformations.hpp
lab_02/libs/picture/src/: matrix.hpp  matrix_impl.hpp  picture.cpp  point_transformations.cpp
lab_02/libs/picture/tests/: test_matrix.cpp  test_point_transformations.cpp
lab_02/src/: main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  qt_picture_provider.cpp  qt_picture_provider.hpp  ui_mainwindow.hpp
